--- a/src/components.festo.drives/app/ix-blazor/Shared/NavMenu.razor
+++ b/src/components.festo.drives/app/ix-blazor/Shared/NavMenu.razor
@@ -25,13 +25,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="Component_3">
-                <span class="oi oi-plus" aria-hidden="true"></span> FestoPLCopen
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
             <NavLink class="nav-link" href="Component_1">
-                <span class="oi oi-plus" aria-hidden="true"></span> FestoPtp
+                <span class="oi oi-plus" aria-hidden="true"></span> Festo
             </NavLink>
         </div>
         <div class="nav-item px-3">
