--- a/src/components.festo.drives/app/ix-blazor/Pages/Component_1.razor
+++ b/src/components.festo.drives/app/ix-blazor/Pages/Component_1.razor
@@ -12,25 +12,27 @@
     }
     #endregion
 
+    #region PartialExtensionExample
+    // No partial extension example available.
+    #endregion
+    
 }
 
 <!-- <GenericComponentStatusView> -->
-@* <AxoComponentStatusView Component="@Entry.Plc.documentation.componentOne.AxoCmmtAsDrive_" /> *@
+ <AxoComponentStatusView Component="@Entry.Plc.documentation.componentOne.AxoCmmtAsPtP_" /> 
 <!-- </GenericComponentStatusView> -->
 
 <!-- <GenericComponentCommandView> -->
-@* <AxoComponentCommandView Component="@Entry.Plc.documentation.componentOne.AxoCmmtAsDrive_" /> *@
+ <AxoComponentCommandView Component="@Entry.Plc.documentation.componentOne.AxoCmmtAsPtP_" /> 
 <!-- </GenericComponentCommandView> -->
 
 <!-- <RccComponentStatusView> -->
-<!-- This will render anything found on parameter assigned to Context  -->
-@* <RenderableContentControl Context="@Entry.Plc.documentation.componentOne" Presentation="Status-Display" /> *@
+ <RenderableContentControl Context="@Entry.Plc.documentation.componentOne.AxoCmmtAsPtP_" Presentation="Status-Display" /> 
 <!-- </RccComponentStatusView> -->
 
 
 <!-- <RccComponentCommandView> -->
-<!-- This will render anything found on parameter assigned to Context  -->
-<RenderableContentControl Context="@Entry.Plc.documentation.componentOne" Presentation="Command-Control" />
+<RenderableContentControl Context="@Entry.Plc.documentation.componentOne.AxoCmmtAsPtP_" Presentation="Command-Control" />
 <!-- </RccComponentCommandView> -->
 
 
