--- a/src/components.festo.drives/app/ix-blazor/Pages/Component_1.razor
+++ b/src/components.festo.drives/app/ix-blazor/Pages/Component_1.razor
@@ -19,20 +19,20 @@
 }
 
 <!-- <GenericComponentStatusView> -->
- <AxoComponentStatusView Component="@Entry.Plc.documentation.componentOne.AxoCmmtAsPtP_" /> 
+ <AxoComponentStatusView Component="@Entry.Plc.documentation.componentOne.AxoCmmtAs" /> 
 <!-- </GenericComponentStatusView> -->
 
 <!-- <GenericComponentCommandView> -->
- <AxoComponentCommandView Component="@Entry.Plc.documentation.componentOne.AxoCmmtAsPtP_" /> 
+ <AxoComponentCommandView Component="@Entry.Plc.documentation.componentOne.AxoCmmtAs" /> 
 <!-- </GenericComponentCommandView> -->
 
 <!-- <RccComponentStatusView> -->
- <RenderableContentControl Context="@Entry.Plc.documentation.componentOne.AxoCmmtAsPtP_" Presentation="Status-Display" /> 
+ <RenderableContentControl Context="@Entry.Plc.documentation.componentOne.AxoCmmtAs" Presentation="Status-Display" /> 
 <!-- </RccComponentStatusView> -->
 
 
 <!-- <RccComponentCommandView> -->
-<RenderableContentControl Context="@Entry.Plc.documentation.componentOne.AxoCmmtAsPtP_" Presentation="Command-Control" />
+<RenderableContentControl Context="@Entry.Plc.documentation.componentOne.AxoCmmtAs" Presentation="Command-Control" />
 <!-- </RccComponentCommandView> -->
 
 
