component instance placed on context - blazor side

--- a/src/templates.simple/ax/src/templates/starterunit/server/StarterUnitTemplate.razor
+++ b/src/templates.simple/ax/src/templates/starterunit/server/StarterUnitTemplate.razor
@@ -12,6 +12,7 @@
       TechnologySettings="Entry.Plc.Context.StarterUnitTemplateTechnologySettings.Shared.Entity"
       DataManger="Entry.Plc.Context.StarterUnitTemplateProcessData"
       Data="Entry.Plc.Context.StarterUnitTemplateProcessData.DataManger.Payload"
-      DataHeader="Entry.Plc.Context.StarterUnitTemplateProcessData.Shared.Entity">
+      DataHeader="Entry.Plc.Context.StarterUnitTemplateProcessData.Shared.Entity"
+      UnitComponents="Entry.Plc.Context.UnitTemplateComponents">
 </Unit>
     
