--- a/src/templates.simple/ax/src/templates/unit/server/UnitTemplate.razor
+++ b/src/templates.simple/ax/src/templates/unit/server/UnitTemplate.razor
@@ -13,5 +13,6 @@
       TechnologySettings="Entry.Plc.Context.UnitTemplateTechnologySettings.Shared.Entity"
       DataManger="Entry.Plc.Context.UnitTemplateProcessData"
       Data="Entry.Plc.Context.UnitTemplateProcessData.DataManger.Payload"
-      DataHeader="Entry.Plc.Context.UnitTemplateProcessData.Shared.Entity">
+      DataHeader="Entry.Plc.Context.UnitTemplateProcessData.Shared.Entity"
+      UnitComponents="Entry.Plc.Context.UnitTemplateComponents">
 </Unit>
