added all components to unittemplate
 - not works needs to be merged with dev

--- a/src/templates.simple/axpansion/server/Pages/Service/Io.razor
+++ b/src/templates.simple/axpansion/server/Pages/Service/Io.razor
@@ -43,7 +43,7 @@
 {
     private void SetInputs()
     {
-        var inputs = Entry.Plc.Inputs.B0;
+        var inputs = Entry.Plc.Inputs.P0;
         foreach (var input in inputs)
         {
             input.Cyclic = true;
