--- a/src/base/src/AXOpen.VisualComposer/ZoomableContainer.razor
+++ b/src/base/src/AXOpen.VisualComposer/ZoomableContainer.razor
@@ -1,4 +1,4 @@
-﻿<div id="zoomAndMoveContainer" style="overflow: hidden; border: solid 1px black">
+﻿<div id="zoomAndMoveContainer" style="overflow: hidden;">
     <div id="zoomAndMoveItem" style="position: relative; transform: scale(1) translate(0px, 0px)">
         @ChildContent
     </div>
