--- a/src/base/src/AXOpen.VisualComposer/VisualComposerContainer.razor
+++ b/src/base/src/AXOpen.VisualComposer/VisualComposerContainer.razor
@@ -1,7 +1,9 @@
 ﻿@using AXSharp.Connector;
 @using Microsoft.AspNetCore.Components.Forms;
 
-<AuthorizeView Roles="Administrator">
+<div class="container">
+    <div class="row">
+        <AuthorizeView Roles="Administrator">
     <Authorized>
         <div style="position: relative; width: 100%; height: 100%;" ondragover="event.preventDefault();">
             @if(_imgId != null)
@@ -211,3 +213,20 @@
         </div>
     </NotAuthorized>
 </AuthorizeView>
+    </div>
+
+    <div class="row shadow-lg w-auto m-5 p-3 mb-5 bg-body-tertiary rounded">
+       <RenderableContentControl @ref="detailsRcc" Context="@DetailsObject" Presentation="Command-Control"></RenderableContentControl>
+    </div>
+</div>
+@code
+{
+    
+    private RenderableContentControl detailsRcc { get; set; }
+
+    public void UpdateDetails(ITwinElement element)
+    {
+        detailsRcc.Context = element;
+        detailsRcc?.ForceRender();
+    }
+}
