--- a/src/base/src/AXOpen.VisualComposer/VisualComposerContainer.razor
+++ b/src/base/src/AXOpen.VisualComposer/VisualComposerContainer.razor
@@ -46,10 +46,16 @@
             </div>
         </ZoomableContainer>
 
-        @foreach (VisualComposerItem child in _children)
-        {
-            <VisualComposerItemModal Origin="@child" />
-        }
+        <EmptyContainer>
+            <CascadingValue Value="@this" Name="Parent" IsFixed="true">
+                <CascadingValue Value="@_imgId" Name="ImgId" IsFixed="true">
+                    @foreach (VisualComposerItem child in _children)
+                    {
+                        <VisualComposerItemModal Origin="@child" />
+                    }
+                </CascadingValue>
+            </CascadingValue>
+        </EmptyContainer>
 
         <div class="modal fade" id="showAllModal-@Id" tabindex="-1" aria-hidden="true">
             <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
