--- a/src/templates.simple/axpansion/server/Components/Unit.razor
+++ b/src/templates.simple/axpansion/server/Components/Unit.razor
@@ -151,27 +151,27 @@
     private AxoMessageProvider AxoMessageProvider =>
         AxoMessageProvider.Create(new ITwinObject[] { this.Component, this.DataManger });
 
-    [Parameter]
+    [Parameter, EditorRequired]
     public AXOpen.Data.AxoDataEntity? Data { get; set; }
 
-    [Parameter]
+    [Parameter, EditorRequired]
     public AXOpen.Data.AxoDataEntity? DataHeader { get; set; }
 
 
-    [Parameter]
+    [Parameter, EditorRequired]
     public AXOpen.Data.AxoDataExchangeBase? DataManger { get; set; }
 
 
-    [Parameter]
+    [Parameter, EditorRequired]
     public RenderFragment? ChildContent { get; set; }
 
-    [Parameter]
+    [Parameter, EditorRequired]
     public AXOpen.Data.AxoDataEntity? TechnologySettings { get; set; }
 
-    [Parameter]
+    [Parameter, EditorRequired]
     public AXOpen.Data.AxoDataEntity? SharedTechnologySettings { get; set; }
 
-    [Parameter]
+    [Parameter, EditorRequired]
     public AxoObject? UnitComponents { get; set; }
 
     public bool EnableModalComponents { set; get; }
