Service view extended by all visualizable items of controlledUnit

--- a/src/templates.simple/ax/src/templates/unit/server/UnitTemplate.razor
+++ b/src/templates.simple/ax/src/templates/unit/server/UnitTemplate.razor
@@ -14,5 +14,6 @@
       DataManger="Entry.Plc.Context.UnitTemplateProcessData"
       Data="Entry.Plc.Context.UnitTemplateProcessData.DataManger.Payload"
       DataHeader="Entry.Plc.Context.UnitTemplateProcessData.Shared.Entity"
-      UnitComponents="Entry.Plc.Context.UnitTemplateComponents">
+      UnitComponents="Entry.Plc.Context.UnitTemplateComponents"
+      AditionalItems="new ITwinObject[]{Entry.Plc.Context.Safety.Zone_1, Entry.Plc.Context.Safety.Zone_2}">
 </Unit>
