--- a/src/templates.simple/axpansion/server/Components/UnitsService.razor
+++ b/src/templates.simple/axpansion/server/Components/UnitsService.razor
@@ -10,8 +10,7 @@
     <div class="row p-3">
         @if (ServiceTask?.Status.Cyclic == (ushort)eAxoTaskState.Busy)
         {
-            <VisualComposerContainer Objects="@( new [] { Components })" />
-            @* <RenderableContentControl Context="Components" Presentation="Command-Control"/> *@
+            <VisualComposerContainer Objects="@Components" />
         }
     </div>
 </div>
@@ -19,7 +18,7 @@
 @code
 {
     [Parameter]
-    public ITwinObject? Components { get; set; }
+    public ITwinObject?[] Components { get; set; }
 
     [Parameter]
     public AxoTask? ServiceTask { get; set; }
