--- a/src/templates.simple/ax/src/templates/starterunit/server/StarterUnitTemplate.razor
+++ b/src/templates.simple/ax/src/templates/starterunit/server/StarterUnitTemplate.razor
@@ -1,8 +1,9 @@
 ﻿@page "/Context/Units/StarterUnitTemplate"
 @using AXOpen.Base.Dialogs;
 @using AXOpen.ToolBox.Extensions
-@using AXOpen.VisualComposer;
 @using axosimple.server.Components;
+@using AXOpen.VisualComposer;
+@using AXSharp.Connector;
 
 @inject IAlertDialogService _alerts
 @inherits RenderableComplexComponentBase<axosimple.StarterUnitTemplate.Unit>
@@ -13,6 +14,7 @@
       DataManger="Entry.Plc.Context.StarterUnitTemplateProcessData"
       Data="Entry.Plc.Context.StarterUnitTemplateProcessData.DataManger.Payload"
       DataHeader="Entry.Plc.Context.StarterUnitTemplateProcessData.Shared.Entity"
-      UnitComponents="Entry.Plc.Context.UnitTemplateComponents">
+      UnitComponents="Entry.Plc.Context.UnitTemplateComponents"
+      AditionalItems="new ITwinObject[]{Entry.Plc.Context.Safety.Zone_1, Entry.Plc.Context.Safety.Zone_2}">
 </Unit>
     
