improvement to visual composer - improves details view of selected item in visual composer - adds spot view for inspectors

--- a/src/core/src/AXOpen.Core.Blazor/AxoObject/AxoObjectSpotView.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoObject/AxoObjectSpotView.razor
@@ -20,7 +20,7 @@
     <a>
        @if (observer?.Provider?.MessagesCount > 0)
        {
-           <span class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">
+           <span class="position-absolute top-0 start-100 translate-middle p-2 bg-@observer?.HighestSeverityColor border border-light rounded-circle">
                <span class="visually-hidden">New alerts</span>
            </span>
        }
