--- a/src/templates.simple/axpansion/server/Components/UnitsService.razor
+++ b/src/templates.simple/axpansion/server/Components/UnitsService.razor
@@ -10,7 +10,7 @@
     <div class="row p-3">
         @if (ServiceTask?.Status.Cyclic == (ushort)eAxoTaskState.Busy)
         {
-            <VisualComposerContainer Objects="@(new [] { Components })" Id="ServiceComposer" />
+            <VisualComposerContainer Objects="Components" Id="ServiceComposer" />
             @* <RenderableContentControl Context="Components" Presentation="Command-Control"/> *@
         }
     </div>
@@ -19,7 +19,7 @@
 @code
 {
     [Parameter]
-    public ITwinObject? Components { get; set; }
+    public ITwinObject[]? Components { get; set; }
 
     [Parameter]
     public AxoTask? ServiceTask { get; set; }
