[wip]changes to visual of alarm view

--- a/src/core/src/AXOpen.Core.Blazor/_Imports.razor
+++ b/src/core/src/AXOpen.Core.Blazor/_Imports.razor
@@ -2,4 +2,9 @@
 @using AXSharp.Presentation.Blazor.Controls.RenderableContent
 @using Microsoft.AspNetCore.Components.Authorization
 @using AXOpen.Base.Dialogs;
+@using AXOpen.Core.Blazor.Properties
+@using AXOpen.Core.Resources
 @using Microsoft.Extensions.Localization
+
+@inject IStringLocalizer<AxOpenCoreResources> Localizer
+@inject IStringLocalizer<PlcStringResources> PlcLocalizer
