--- a/src/core/src/AXOpen.Core.Blazor/AxoMessenger/Static/AxoMessengerDetailedView.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoMessenger/Static/AxoMessengerDetailedView.razor
@@ -7,41 +7,64 @@
 @if (Component.State > eAxoMessengerState.Idle)
 {
     <div class="container text-center border border-2 m-3 rounded-3 border-danger">
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">@Localizer["Source"]</th>
+              <th scope="col">@Localizer["Description"]</th>
+              <th scope="col">@Localizer["Risen"]</th>
+              <th scope="col">@Localizer["Fallen"]</th>
+              <th scope="col">@Localizer["Acknowledged"]</th>
+            </tr>
+          </thead>
+          <tbody>
+          <tr>
+              <th scope="row">@Component.GetParent()?.AttributeName</th>
+              <td><span text-white class="@(AcknowledgedBeforeFallen ? "line-through" : "")">@Category</span></td>
+              <td><span text-white class="@(AcknowledgedBeforeFallen ? "line-through" : "")">@MessageText</span></td>
+              <td>@Risen</td>
+              <td>@Fallen</td>
+              <td>@Acknowledged</td>
+              <td>
+                  <button class="btn @AckBtnBackgroundColor" type="button" @onclick="@AcknowledgeTask" hidden="@HideAckowledgeButton">
+                      <span class="oi oi-x" aria-hidden="true"/>
+                  </button>
+              </td>
+              <button class="btn @BackgroundColor" type="button" @onclick="ToggleAlarmView">
+                  <span class="bi bi-bug" aria-hidden="true"/>
+              </button>
+          </tr>
+          </tbody>
+        </table>
+            @* <div class="row"> *@
+            @*     <div class="d-flex align-end me-2 mt-2 mb-2"> *@
+            @*         <div class="btn-group"> *@
+            @*             <button class="btn @BackgroundColor" type="button"> *@
+            @*                 <span> @Component.GetParent()?.AttributeName</span> *@
+            @*                 <span text-white class="@(AcknowledgedBeforeFallen ? "line-through" : "")">@Category:</span> *@
+            @*                 <span text-white class="@(AcknowledgedBeforeFallen ? "line-through" : "")">@MessageText</span> *@
+            @*                 <span text-white class="oi oi-arrow-thick-top">@Risen</span> *@
+            @*                 <span text-white class="oi oi-arrow-thick-bottom">@Fallen</span> *@
+            @*                 <span text-white class="oi oi-task" hidden="@AcknowledgementDoesNotRequired">@Acknowledged</span> *@
+            @*             </button> *@
+            @* *@
+            @*             <button type="button" class="btn @BackgroundColor" data-bs-toggle="popover" data-bs-title="Help" data-bs-content="@HelpText">?</button> *@
+            @* *@
+            @*             <button class="btn @AckBtnBackgroundColor" type="button" @onclick="@AcknowledgeTask" hidden="@HideAckowledgeButton"> *@
+            @*                 <span class="oi oi-x" aria-hidden="true"/> *@
+            @*             </button> *@
+            @*             <button class="btn @BackgroundColor" type="button" @onclick="ToggleAlarmView"> *@
+            @*                 <span class="bi bi-bug" aria-hidden="true" /> *@
+            @*             </button> *@
+            @*         </div> *@
+            @*     </div> *@
+            @* </div>     *@
         
-        
-            <div class="row">
-                <div class="d-flex align-end me-2 mt-2 mb-2">
-                    <div class="btn-group">
-                        <button class="btn @BackgroundColor" type="button">
-                            <span> @Component.GetParent()?.AttributeName</span>
-                            <span text-white class="@(AcknowledgedBeforeFallen ? "line-through" : "")">@Category:</span>
-                            <span text-white class="@(AcknowledgedBeforeFallen ? "line-through" : "")">@MessageText</span>
-                            <span text-white class="oi oi-arrow-thick-top">@Risen</span>
-                            <span text-white class="oi oi-arrow-thick-bottom">@Fallen</span>
-                            <span text-white class="oi oi-task" hidden="@AcknowledgementDoesNotRequired">@Acknowledged</span>
-                        </button>
-
-                        <button type="button" class="btn @BackgroundColor" data-bs-toggle="popover" data-bs-title="Help" data-bs-content="@HelpText">?</button>
-
-                        <button class="btn @AckBtnBackgroundColor" type="button" @onclick="@AcknowledgeTask" hidden="@HideAckowledgeButton">
-                            <span class="oi oi-x" aria-hidden="true"/>
-                        </button>
-                        <button class="btn @BackgroundColor" type="button" @onclick="ToggleAlarmView">
-                            <span class="bi bi-bug" aria-hidden="true" />
-                        </button>
-                    </div>
-                </div>
-            </div>    
-        @Component.Symbol;
         @if (!OnlyAlarmView)
         {
             <div class="row">
                 <RenderableContentControl Context="Component.Component" Presentation="Command"></RenderableContentControl>
-               @*  <button class="btn @BackgroundColor" type="button" @onclick="ToggleComponentView">
-                    <span class="oi oi-x" aria-hidden="true" />
-                </button> *@
             </div>
-            
         }
         
     </div>
